5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4344/executions/1621_2936.log
== TEST (2019-04-01 19:23:30) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor"))
v = p*v=n.r.t
print(v)
-- ERROR:
File "XXXX", line 4
    v = p*v=n.r.t
       ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:30:51) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = 273,15
V = 1000
R = 0,82
v = p*V = n*R*t + t1
print(v)
-- ERROR:
File "XXXX", line 7
    v = p*V = n*R*t + t1
       ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:30:55) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = 273,15
V = 1000
R = 0,82
v = p*V = n*R*t + t1
print(v)
-- ERROR:
File "XXXX", line 7
    v = p*V = n*R*t + t1
       ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:31:37) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = 273,15
V = 1000
R = 0,82
v = p*V = n*R*t + t1
print(V)
-- ERROR:
File "XXXX", line 7
    v = p*V = n*R*t + t1
       ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:31:59) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = 273,15
V = 1000
R = 0,82
v = p*V=n*R*t + t1
print(V)
-- ERROR:
File "XXXX", line 7
    v = p*V=n*R*t + t1
       ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:32:37) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = 273,15
V = 1000
R = 0,82
v = (p*V=n*R*(t + t1))
print(V)
-- ERROR:
File "XXXX", line 7
    v = (p*V=n*R*(t + t1))
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:32:52) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = 273,15
V = 1000
R = 0,082
v = (p*V=n*R*(t + t1))
print(V)
-- ERROR:
File "XXXX", line 6
    R = 0,082
            ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:35:11) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = 273,15
V = 1000
R = 0,82
v = p*V=n*R*(t + t1)
print(V)
-- ERROR:
File "XXXX", line 7
    v = p*V=n*R*(t + t1)
       ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:35:38) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = 273,15
V = 1000
R = 0,82
v = p*V=n*R*(t + t1)
print(v)
-- ERROR:
File "XXXX", line 7
    v = p*V=n*R*(t + t1)
       ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:35:40) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = 273,15
V = 1000
R = 0,82
v = p*V=n*R*(t + t1)
print(v)
-- ERROR:
File "XXXX", line 7
    v = p*V=n*R*(t + t1)
       ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:36:55) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
V = 1000
R = 0,82
v = p*V=n*R*t1
print(v)
-- ERROR:
File "XXXX", line 7
    v = p*V=n*R*t1
       ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:36:57) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
V = 1000
R = 0,82
v = p*V=n*R*t1
print(v)
-- ERROR:
File "XXXX", line 7
    v = p*V=n*R*t1
       ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:37:25) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = p*V=n*R*t1
print(v)
-- ERROR:
File "XXXX", line 5
    v = p*V=n*R*t1
       ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:37:26) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = p*V=n*R*t1
print(v)
-- ERROR:
File "XXXX", line 5
    v = p*V=n*R*t1
       ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:38:26) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t+273,15
v = p*V=n*R*t1
print(v)
-- ERROR:
File "XXXX", line 5
    v = p*V=n*R*t1
       ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:38:28) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t+273,15
v = p*V=n*R*t1
print(v)
-- ERROR:
File "XXXX", line 5
    v = p*V=n*R*t1
       ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:39:49) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
R = 0,82atm
v = p*V=n*R*t1
print(v/1000)
-- ERROR:
File "XXXX", line 5
    R = 0,82atm
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:39:50) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
R = 0,82atm
v = p*V=n*R*t1
print(v/1000)
-- ERROR:
File "XXXX", line 5
    R = 0,82atm
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:42:43) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = p*V=n*R*t1
print(t1)
print(v)
-- ERROR:
File "XXXX", line 5
    v = p*V=n*R*t1
       ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:42:44) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = p*V=n*R*t1
print(t1)
print(v)
-- ERROR:
File "XXXX", line 5
    v = p*V=n*R*t1
       ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:44:20) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)/1000

print(v)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)/1000
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:44:21) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)/1000

print(v)
-- EXECUTION TIME:
0.210389
-- ERROR:
  File "/home/codebench/codes/1621/2936/main.py", line 5
    v = (p*V=n*R*t1)/1000
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:15) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:16) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:18) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:18) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:18) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:18) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:18) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:18) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:18) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:18) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:18) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:18) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:18) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:18) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:19) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:20) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:20) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:21) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:21) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:21) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:21) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:21) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:21) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:21) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:21) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:21) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:21) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:21) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:21) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:21) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:21) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:21) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:21) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:21) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:21) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:21) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:21) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:21) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:21) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:21) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:21) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:21) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:21) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:21) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:21) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:21) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:21) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:22) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
t1 = t + 273,15
v = (p*V=n*R*t1)
print(v /1000)
-- ERROR:
File "XXXX", line 5
    v = (p*V=n*R*t1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:47:05) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
v = (p*V=n*R*(t1+273,15))/1000
print(v)
-- ERROR:
File "XXXX", line 4
    v = (p*V=n*R*(t1+273,15))/1000
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:47:06) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
v = (p*V=n*R*(t1+273,15))/1000
print(v)
-- ERROR:
File "XXXX", line 4
    v = (p*V=n*R*(t1+273,15))/1000
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:47:07) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
v = (p*V=n*R*(t1+273,15))/1000
print(v)
-- ERROR:
File "XXXX", line 4
    v = (p*V=n*R*(t1+273,15))/1000
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:47:07) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
v = (p*V=n*R*(t1+273,15))/1000
print(v)
-- ERROR:
File "XXXX", line 4
    v = (p*V=n*R*(t1+273,15))/1000
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:48:44) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
print(v //1000)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(v //1000)
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:50:19) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
v-= p*V = n*R*t
print(v //1000)
-- ERROR:
File "XXXX", line 4
    v-= p*V = n*R*t
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:51:26) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
T = t+273,15
v-= p*V = n*R*T
print(v //1000)
-- ERROR:
File "XXXX", line 5
    v-= p*V = n*R*T
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:51:46) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
T = t+273,15
R = 0,82
v-= p*V = n*R*T
print(v //1000)
-- ERROR:
File "XXXX", line 6
    v-= p*V = n*R*T
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:52:25) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
T = t+273,15
R = 0,82
V = 1
v-= p*V = n*R*T
print(v //1000)
-- ERROR:
File "XXXX", line 7
    v-= p*V = n*R*T
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:52:26) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
T = t+273,15
R = 0,82
V = 1
v-= p*V = n*R*T
print(v //1000)
-- ERROR:
File "XXXX", line 7
    v-= p*V = n*R*T
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:52:49) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
T = t+273,15
v = p*V = n*R*T
print(v //1000)
-- ERROR:
File "XXXX", line 5
    v = p*V = n*R*T
       ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:53:01) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
v = p*V = n*R*T
print(v //1000)
-- ERROR:
File "XXXX", line 4
    v = p*V = n*R*T
       ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:53:03) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
v = p*V = n*R*T
print(v //1000)
-- ERROR:
File "XXXX", line 4
    v = p*V = n*R*T
       ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:53:51) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
T = t + 273,15
v = p*V = n*R*T
print(v //1000)
-- ERROR:
File "XXXX", line 5
    v = p*V = n*R*T
       ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:53:52) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
T = t + 273,15
v = p*V = n*R*T
print(v //1000)
-- ERROR:
File "XXXX", line 5
    v = p*V = n*R*T
       ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:54:40) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
T = t + 273,15
R = 0,82
v = p*V = n*R*T
print(v //1000)
-- ERROR:
File "XXXX", line 6
    v = p*V = n*R*T
       ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:54:41) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
T = t + 273,15
R = 0,82
v = p*V = n*R*T
print(v //1000)
-- ERROR:
File "XXXX", line 6
    v = p*V = n*R*T
       ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 17:19:23) 
-- CODE:
p = float(input("leia o valor:"))
n = int(input("leia o valor:"))
t = float(input("leia o valor:"))
T = t + 273,15
R = 0,82
v = p*V = n*R*T
print(v //1000)
-- ERROR:
File "XXXX", line 6
    v = p*V = n*R*T
       ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
